<resources>
    <string name="app_name">Traffic Light Monitor</string>
    <string name="app_description">Application that used to\nmonitor traffic lights.</string>
    <string name="version">Version 1.0</string>
    <string name="developed_by">Developed by\nAlien Squad</string>
    <string name="radius">Radius</string>
    <string name="info">Info</string>
    <string name="vehicles_per_minutes">%1$d vehicles/minutes</string>
    <string name="intersections">Intersections</string>
    <string name="intersection_info">%1$s (%2$d seconds of waiting time)</string>
    <string name="about_apps">About Apps</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_now">Enable Now</string>
    <string name="exit">Exit</string>
    <string name="enable_gps_required_message">To use this application, it is necessary to use GPS. Please enable your GPS.</string>
    <string name="enable_location_permission_message">To use this application, it is necessary to use location permission. Please enable your location permission.</string>
    <string name="enable_location_permission">Enable Location Permission</string>
    <string name="list">List</string>
    <string name="maps">Maps</string>
    <string name="route">Route</string>
    <string name="route_not_found_message">No routes found.</string>
</resources>